src/objects/Cooking_Ingridients__c.object
<CustomObject>
    <fields>
        <fullName>Ingridient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ingridient</label>
        <referenceTo>Ingridient__c</referenceTo>
        <relationshipLabel>Cooking Ingridients</relationshipLabel>
        <relationshipName>Cooking_Ingridients</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recepie__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Recepie</label>
        <referenceTo>Recepie__c</referenceTo>
        <relationshipLabel>Cooking Ingridients</relationshipLabel>
        <relationshipName>Cooking_Ingridients</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <label>Cooking Ingridient</label>
    <nameField>
        <label>Cooking Ingridients Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cooking Ingridients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>